--- a/src/main/resources/templates/view/login/login.html
+++ b/src/main/resources/templates/view/login/login.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             <input type="radio" id="roleChoice1"
-               name="role" value="Doctor">
+               name="role" value="Doctor" checked>
             <label for="roleChoice1">Doctor</label>
             <input type="radio" id="roleChoice2"
                    name="role" value="Laboratory">
