--- a/src/main/resources/templates/view/direction/registered_direction.html
+++ b/src/main/resources/templates/view/direction/registered_direction.html
@@ -1,10 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <title>Reg_Direction</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<head>
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
+<h1>Reg Direction</h1>
+<p><input id="direction" list="list">
+    <datalist id="list"></datalist>
+</p>
+<table id="direction_info">
 
+</table>
+<SCRIPT th:inline="javascript">
+    var data = [[${registered_list}]]
+    window.onload = dirList()
+    document.querySelector('input[list="list"]').addEventListener('input', loadInTable);
+    function dirList(){
+        var list = document.getElementById('list');
+        for (var i = 0, ln = data.length; i < data.length; i++) {
+            var option = document.createElement('option');
+            var m = data[i]
+            option.value = m.name + " " + m.surname + " " + m.phone_number;
+            list.appendChild(option)
+        }
+    }
+    function findPatient(patient) {
+        for (var i = 0, ln = data.length; i < data.length; i++) {
+            if (patient === data[i].name + " " + data[i].surname + " " + data[i].phone_number) {
+                return data[i].id
+            }
+        }
+    }
+    function loadInTable() {
+        $.getJSON( "http://localhost:8080/direction/getRegDirection",{id:findPatient(document.getElementById("direction").value)}).done(function (direction){
+            var dir = document.getElementById('direction_info');
+            while(dir.firstChild){
+                dir.removeChild(dir.firstChild);
+            }
+            var tr = document.createElement("tr");
+
+            var td = document.createElement("td");
+            td.innerHTML = "Name"
+            tr.appendChild(td)
+            td = document.createElement("td");
+            td.innerHTML = direction.patient_name
+            tr.appendChild(td)
+            dir.appendChild(tr)
+
+            tr = document.createElement("tr");
+            td = document.createElement("td");
+            td.innerHTML = "Surname"
+            tr.appendChild(td)
+            td = document.createElement("td");
+            td.innerHTML = direction.patient_surname
+            tr.appendChild(td)
+            dir.appendChild(tr)
+
+            tr = document.createElement("tr");
+            td = document.createElement("td");
+            td.innerHTML = "Age"
+            tr.appendChild(td)
+            td = document.createElement("td");
+            td.innerHTML = direction.patient_Age
+            tr.appendChild(td)
+            dir.appendChild(tr)
+
+            tr = document.createElement("tr");
+            td = document.createElement("td");
+            td.innerHTML = "Phone Number"
+            tr.appendChild(td)
+            td = document.createElement("td");
+            td.innerHTML = direction.phone_Number
+            tr.appendChild(td)
+            dir.appendChild(tr)
+
+            var id = document.getElementById('direction_id');
+            id.value = direction.id
+        })
+    }
+
+</SCRIPT>
+
+<form action="../../direction/regdir" name="regDirectionForm" method="post" target="_self">
+    <input type="datetime-local" name="date_time">
+    <input type="hidden" name="token" th:value="${token}"/>
+    <input type="hidden" id="laboratory_id" name="laboratory_id" th:value=""/>
+    <input type="hidden" id="direction_id" name="direction_id" />
+    <button type="submit">Registrate Direction</button>
+</form>
 </body>
 </html>
