Просмотр записанных направлений

--- a/src/main/resources/templates/view/direction/direction.html
+++ b/src/main/resources/templates/view/direction/direction.html
@@ -76,7 +76,7 @@
             td.innerHTML = "Phone Number"
             tr.appendChild(td)
             td = document.createElement("td");
-            td.innerHTML = direction.phone_Number
+            td.innerHTML = direction.phone_number
             tr.appendChild(td)
             dir.appendChild(tr)
 
