Сохранение результатов ренгена (снимки по ссылке)

--- a/src/main/resources/templates/view/direction/registered_direction.html
+++ b/src/main/resources/templates/view/direction/registered_direction.html
@@ -86,7 +86,7 @@
 
 </SCRIPT>
 
-<form action="../../" name="postResultForm" method="post" target="_self">
+<form action="../../result/result" name="postResultForm" method="post" target="_self">
     <input type="hidden" name="token" th:value="${token}"/>
     <input type="hidden" id="laboratory_id" name="laboratory_id" th:value="${laboratory_id}"/>
     <input type="hidden" id="direction_id" name="direction_id" />
