--- a/src/main/resources/templates/view/direction/registered_direction.html
+++ b/src/main/resources/templates/view/direction/registered_direction.html
@@ -95,12 +95,12 @@
 
 </SCRIPT>
 
-<form action="../../result/result" name="postResultForm" method="post" target="_self">
+<form action="../../result/result" name="postResultForm" method="post" target="_self" enctype=multipart/form-data>
     <input type="hidden" name="token" th:value="${token}"/>
     <input type="hidden" id="laboratory_id" name="laboratory_id" th:value="${laboratory_id}"/>
     <input type="hidden" id="direction_id" name="direction_id" />
     <button type="submit">Post result</button>
-    Src:<input type="text" name="src">
+    Src:<input type="file" name="file">
     Comment to result :<textarea type="text" name="description"></textarea>
 
 
